<resources>
    <string name="app_name">Food Tracker</string>
    <string name="food_tab_label">Food</string>
    <string name="restaurants_tab_label">Restaurants</string>
    <string name="food_item_name_hint">Name</string>
    <string name="description_hint">Description</string>
    <string name="rating_label">Rating</string>
    <string name="save_item_label">Save</string>
    <string name="delete_food_item_label">Delete</string>
    <string name="restaurant_name_hint">Name</string>
    <string name="save_restaurant_label">Save</string>
    <string name="delete_restaurant_label">Delete</string>
    <string name="food_item_restaurant_label">Restaurant</string>
    <string name="select_restaurant_hint">Select Restaurant</string>
    <string name="edit_restaurant_label">Edit</string>
    <string name="edit_item_label">Edit</string>
    <string name="no_description_label">No description</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_save">Save</string>
    <string name="restaurant_hint">Restaurant</string>
    <string name="menu_item_add_restaurant">Add Restaurant</string>
    <string name="comments_hint">Comments</string>
    <string name="menu_item_export_data">Export Data</string>
    <string name="menu_item_import_data">Import Data</string>
    <plurals name="items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
</resources>
