<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_add_restaurant"
        android:title="@string/menu_item_add_restaurant"
        android:contentDescription="@string/menu_item_add_restaurant"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_export_data"
        android:title="@string/menu_item_export_data"
        android:contentDescription="@string/menu_item_export_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_import_data"
        android:title="@string/menu_item_import_data"
        android:contentDescription="@string/menu_item_import_data"
        app:showAsAction="never" />
</menu>
